[gd_scene load_steps=7 format=2]

[ext_resource path="res://font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GFX/Tools/key.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Objects/Key.gd" type="Script" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60.6803, 48.3789 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.4083, 29.0517 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="Key" type="Area2D"]
collision_layer = 4
collision_mask = 2147483649
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2.2981, 0 )
shape = SubResource( 2 )

[node name="Press_E" type="RichTextLabel" parent="."]
visible = false
margin_left = -101.965
margin_top = -32.0
margin_right = -61.9646
margin_bottom = 8.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/normal_font = SubResource( 3 )
tab_size = 1
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Key_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Key_body_exited"]
